Update prfl image  index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <p style="color: red; motion: 100px;"><h1>Welcome to my resume</h1></p>
     </marquee>
     <header>
+        <img src="sandipan.png"height=200px; width="200px" alt="Profile Photo" style="align-items: center;"><br>
+        <br>
         <p id="name" style="display: inline;"><h3 style="display: inline;">Name:</h3><span style="display: inline;">Sandipan Das</span></p><br>
         <p id="address" style="display: inline;"><h3 style="display: inline;">Address:</h3><span style="display: inline;">218, Basudevpur Road, Saratpally, Shyamnagar, North 24 pgs</span></p><br>
         <p id="state" style="display: inline;"><h3 style="display: inline;">State:</h3><span style="display: inline;">West Bengal</span></p><br>
